@@ -13,9 +13,10 @@ Version 1.1.3 to be released
 - Bug #1208: Unsigned integer column type was not handled correctly (Qiang)
 - Bug #1213: Fixed the bug that skipOnError doesn't have effect on inline validators (Qiang)
 - Bug #1226: CWebUser::autoRenewCookie does not handle the case when the user is already logged in (Qiang)
-- Bug #1231: CPgsqlColumnSchema would incorrectly parse the default value with some complex expressions (Qiang)
 - Bug #1227: CActiveRecord::resetScope doesn't work with default scope (Sam Dark)
+- Bug #1231: CPgsqlColumnSchema would incorrectly parse the default value with some complex expressions (Qiang)
 - Bug #1241: DB search parameters should have special characters escaped (Qiang)
+- Bug #1252: CJSON::encode() was not able to encode models and model arrays (Sam Dark)
 - Enh #862: Enhanced CSort virtual attributes and support for related tables (Qiang)
 - Enh #1158: Added translations in Latvian (lafriks)
 - Enh #1166: Added CActiveRecord::setOldPrimaryKey (Qiang)
@@ -29,7 +30,7 @@ Version 1.1.3 to be released
 - Enh #1202: Added support for using anonymous functions as component property values (Qiang)
 - Enh #1203: Gii now respects the newDirMode and newFileMode settings even when lower umask is set (Qiang)
 - Enh #1225: Added 'firstError' option to CHtml::errorSummary() to support displaying only the first error message of each model attribute (Qiang)
-- Enh #1232: Added CAuthManager::showErrors. When value is true Yii will turn on error_reporting for RBAC bizRules. False by default (Sam Dark) 
+- Enh #1232: Added CAuthManager::showErrors. When value is true Yii will turn on error_reporting for RBAC bizRules. False by default (Sam Dark)
 - Enh #1239: CBreadcrumbs should have the 'Home' label translated (Qiang)
 - Enh: CActiveRecord::beforeFind event is now triggered in all cases including related models with both lazy and eager loading (Sam Dark, creocoder)
 - Enh: Added support for using array-typed model attributes in active methods in CHtml (Qiang)
